tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:12:52 ----------------------------------------------------
12 |      val get: () ->{} () ->{io} Cap^ = () => () => io // error
   |                                                    ^^
   |(io : Cap^) cannot be referenced here; it is not included in the allowed capture set {} of pure base class trait Pure
